--- a/app/src/main/res/layout/activity_acer.xml
+++ b/app/src/main/res/layout/activity_acer.xml
@@ -5,8 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@color/white">
+    tools:context=".MainActivity">
 
     <!--主頁面佈局-->
     <LinearLayout
@@ -32,8 +31,7 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="桌上電腦"
-            android:textColor="@color/black"/>
+            android:text="桌上電腦" />
 
         <ImageButton
             android:id="@+id/btn_laptop"
@@ -47,8 +45,7 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="筆記本電腦"
-            android:textColor="@color/black"/>
+            android:text="筆記本電腦" />
 
         <ImageButton
             android:id="@+id/btn_pad"
@@ -60,8 +57,7 @@
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="平板電腦"
-            android:textColor="@color/black"/>
+            android:text="平板電腦" />
 
     </LinearLayout>
 
