--- a/app/src/main/res/layout/activity_asusx517.xml
+++ b/app/src/main/res/layout/activity_asusx517.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".asusx517"
-    android:background="@color/white">
+    tools:context=".asusx517">
 
 
     <WebView
@@ -17,28 +16,32 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+
         android:id="@+id/textView47"
-        android:layout_width="wrap_content"
+
+        android:layout_width="40dp"
+
         android:layout_height="22dp"
         android:layout_marginStart="106dp"
         android:layout_marginTop="102dp"
         android:background="@drawable/border"
         android:text="CPU  "
-        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/textView48"
         app:layout_constraintEnd_toStartOf="@+id/textView46"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/youtubeView" />
 
     <TextView
+
         android:id="@+id/textView46"
+
         android:layout_width="212dp"
+
         android:layout_height="22dp"
         android:layout_marginTop="102dp"
         android:layout_marginEnd="59dp"
         android:background="@drawable/border"
         android:text="Core™ i5第 9 代 Intel® 處理器 "
-        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/textView49"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView47"
@@ -46,25 +49,27 @@
 
     <TextView
         android:id="@+id/textView48"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
+
         android:layout_height="22dp"
         android:layout_marginStart="106dp"
         android:background="@drawable/border"
         android:text="RAM  "
-        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/textView50"
         app:layout_constraintEnd_toStartOf="@+id/textView49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView47" />
 
     <TextView
+
         android:id="@+id/textView49"
+
         android:layout_width="212dp"
+
         android:layout_height="22dp"
         android:layout_marginEnd="59dp"
         android:background="@drawable/border"
         android:text="8GB(DDR4)"
-        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/textView51"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -73,25 +78,27 @@
 
     <TextView
         android:id="@+id/textView50"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
+
         android:layout_height="22dp"
         android:layout_marginStart="106dp"
         android:background="@drawable/border"
         android:text="GPU  "
-        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/textView52"
         app:layout_constraintEnd_toStartOf="@+id/textView51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView48" />
 
     <TextView
+
         android:id="@+id/textView51"
+
         android:layout_width="212dp"
+
         android:layout_height="22dp"
         android:layout_marginEnd="59dp"
         android:background="@drawable/border"
         android:text="NVIDIA®GPU GTX 1050 "
-        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/textView54"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView50"
@@ -99,36 +106,38 @@
 
     <TextView
         android:id="@+id/textView52"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
+
         android:layout_height="22dp"
         android:layout_marginStart="106dp"
         android:background="@drawable/border"
         android:text="SSD  "
-        android:textColor="@color/black"
         app:layout_constraintEnd_toStartOf="@+id/textView54"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView50" />
 
     <TextView
         android:id="@+id/textView55"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
+
         android:layout_height="22dp"
         android:layout_marginStart="106dp"
         android:background="@drawable/border"
         android:text="螢幕  "
-        android:textColor="@color/black"
         app:layout_constraintEnd_toStartOf="@+id/textView53"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView52" />
 
     <TextView
+
         android:id="@+id/textView53"
+
         android:layout_width="212dp"
+
         android:layout_height="22dp"
         android:layout_marginEnd="59dp"
         android:background="@drawable/border"
         android:text="15.6 吋 "
-        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView55"
         app:layout_constraintTop_toBottomOf="@+id/textView54" />
@@ -142,7 +151,6 @@
         android:layout_marginEnd="366dp"
         android:layout_marginBottom="22dp"
         android:text="簡介:"
-        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -157,20 +165,21 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="61dp"
         android:text="ASUS X571 搭載 Intel® 處理器，提供流暢且即時的運算效能。 ASUS X571 最高配備 NVIDIA® GeForce® GTX 1050 獨立顯示卡、8GB RAM 和 Windows 10 Home，是兼具日常工作與休閒娛樂的高效能筆記型電腦。"
-        android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
+
         android:id="@+id/textView54"
+
         android:layout_width="213dp"
+
         android:layout_height="22dp"
         android:layout_marginEnd="59dp"
         android:background="@drawable/border"
         android:text="256GB(PCIe SSD) "
-        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/textView53"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView52"
